...
                            child: const Icon(Icons.more_horiz)),
                      ),
                      //only works on entries page
                      Expanded(
                          flex: 2,
                          child: TextFormField(
                            key: const Key('Filter_By_TextForm'),
                            textAlign: TextAlign.center,
                            controller: searchBarInput,
                            onChanged: updateFilteredList,
                            decoration: const InputDecoration(
                                border: UnderlineInputBorder(),
                                labelText: 'Enter a journal title',
...
                        decoration: BoxDecoration(
                          borderRadius: BorderRadius.circular(10.0),
                        ),

                        // Dropdown for filter by date
                        child: DropdownButtonFormField<String>(
                          key: const Key("SortByDateDropDown"),
                          borderRadius: BorderRadius.circular(10.0),
                          // Set up the dropdown menu items
                          value: chosenDisplay.toString(),
                          items: displayDropDown,
                          // if changed set new display option
                          onChanged: (item) => setState(() {
...
                                            "Are you sure you wish to delete this entry?"),
                                        actions: <Widget>[
                                          TextButton(
                                              onPressed: () =>
                                                  Navigator.of(context)
                                                      .pop(true),
                                              child: const Text("DELETE")),
                                          TextButton(
                                            onPressed: () =>
                                                Navigator.of(context)
                                                    .pop(false),
                                            child: const Text("CANCEL"),
                                          ),
                                        ],
                                      );
                                    },
                                  );
                                },
...

  String getMostFrequentEmotion(List<JournalEntry> entries) {
    List<JournalEntry> filteredEntries = _getEntriesInRange();

    //map to track emotion use
    Map<String, int> emotionsAndAmounts = {
      'Happy': 0,
      'Trust': 0,
      'Fear': 0,
      'Sad': 0,
      'Disgust': 0,
      'Anger': 0,
      'Surprise': 0,
...
    int strength = 0;
    return showDialog(
        context: context,
        builder: (BuildContext context) {
          return AlertDialog(
            content: CircularSeekBar(
              key: const Key('EmotionalDial'),
              width: double.infinity,
              height: 175,
              progress: emotion.strength.toDouble(),
              maxProgress: 60,
              barWidth: 8,
              startAngle: 5,
...
                        )),
              ),
            ),
            actions: [
              // pop the alert dialog off the screen and don't save the strength changes
              TextButton(
                  key: const Key('cancelDial'),
                  onPressed: () {
                    Navigator.of(context).pop();
                  },
                  child: const Text("Cancel")),

              // Save the strength changes and pop the dialog off the screen
              TextButton(
                  key: const Key('saveDial'),
                  onPressed: () {
                    emotion.strength = strength;
                    Navigator.of(context).pop();
                  },
                  child: const Text("Save")),
            ],
...
            content: Wrap(
              spacing: 5.0,
              children: createAvailableTagsList(stfSetState),
            ),
            actions: <Widget>[
              TextButton(
                key: const Key('saveTagsButton'),
                child: const Text('Save'),
                onPressed: () {
                  Navigator.of(stfContext).pop();
                },
              ),
            ],
...
            content: Wrap(
              spacing: 5.0,
              children: createAvailableEmotionsList(stfSetState),
            ),
            actions: <Widget>[
              TextButton(
                key: const Key('saveEmotionsButton'),
                child: const Text('Save'),
                onPressed: () {
                  Navigator.of(stfContext).pop();
                },
              ),
            ],
...
              child: Column(children: [
                // Text field for the Journal Entry Title
                Padding(
                  padding: const EdgeInsets.all(20),
                  child: TextField(
                    controller: titleController,
                    key: const Key("titleInput"),
                    decoration: const InputDecoration(
                        border: UnderlineInputBorder(),
                        labelText: 'Title',
                        hintText: 'Inspiration is a tap away...'),
                  ),
                ),
                // Text input field for the Journal Entry Body
                Padding(
                  padding: const EdgeInsets.all(20),
                  child: GestureDetector(
                    key: const Key("entryBodyKey"),
                    onHorizontalDragEnd: (details) async {
                      requestEntryTemplate(context);
                      setState(() {});
                    },
                    onDoubleTap: () => setState(() => getRandomQuestion()),
                    child: TextField(
...
      // Plan save tag in replacement of the nav bar
      bottomNavigationBar: CustomNavigationBar(
        selectedIndex: 3,
        allowReselect: true,
        destinations: const [
          NavigationDestination(
              key: Key("planButton"),
              icon: Icon(Icons.more_time),
              label: "Plan"),
          NavigationDestination(
              key: Key("tagButton"), icon: Icon(Icons.tag), label: "Tags"),
          NavigationDestination(
              key: Key("emotionButton"),
              icon: Icon(Icons.emoji_emotions),
              label: "Emotions"),
          NavigationDestination(
              key: Key("saveButton"), icon: Icon(Icons.save), label: "Save"),
        ],
        onDestinationSelected: (index) async {
          switch (index) {
            case 0:
              datePicked = await pickPlanDate() ?? datePicked;
              isPlan = datePicked != null;
...
