...
  static const List<NavigationDestination> defaultDestinations = [
    NavigationDestination(
        key: Key("navDashboard"),
        icon: Icon(Icons.dashboard),
        label: "Dashboard"),
    NavigationDestination(
        key: Key("navEntries"), icon: Icon(Icons.feed), label: "Entries"),
    NavigationDestination(
        key: Key("navNewEntry"), icon: Icon(Icons.add), label: "NewEntry"),
    NavigationDestination(
        key: Key("navCalendar"),
        icon: Icon(Icons.calendar_month),
        label: "Calendar"),
    NavigationDestination(
        key: Key("navPlans"), icon: Icon(Icons.event_note), label: "Plans"),
    NavigationDestination(
        key: Key("navSettings"), icon: Icon(Icons.settings), label: "Settings"),
  ];

  /// [destinations] is the different icons at the bottom that a user could tap on to visit
  final List<NavigationDestination> destinations;
...
                    mainAxisAlignment: MainAxisAlignment.spaceBetween,
                    crossAxisAlignment: CrossAxisAlignment.center,
                    children: [
                      // Checkbox to mark plans as completed
                      if (widget.entry is Plan)
                        IconButton(
                          key: const Key("PlanCompleteButton"),
                          // Show filled outline for completed
                          icon: const Icon(Icons.check_box_outline_blank),
                          selectedIcon: const Icon(Icons.check_box),
                          isSelected: (widget.entry as Plan).planCompleted == true,
                          onPressed: toggleEntry,
                        ),
...
