...

List<JournalEntry> entries = [];
List<Plan> plans = [];

//add tag list
List<Tag> tagList = [
  Tag(name: 'Calm', color: const Color(0xff90c6cf)),
  Tag(name: 'Centered', color: const Color(0xff794e5d)),
  Tag(name: 'Content', color: const Color(0xfff1903a)),
  Tag(name: 'Fulfilled', color: const Color(0xff59b1a1)),
  Tag(name: 'Patient', color: const Color(0xff00c5cb)),
  Tag(name: 'Peaceful', color: const Color(0xffa7d7d6)),
  Tag(name: 'Present', color: const Color(0xffff706f)),
  Tag(name: 'Relaxed', color: const Color(0xff3f6961)),
  Tag(name: 'Serene', color: const Color(0xffb7d2c4)),
...
